src/test/resources/compiler/parser/input/pass/damplistdampoptionl.rule
pre -> +post1 action [0,,0].