src/test/resources/compiler/parser/input/fail/other_letter_used2.rule
pre -> +post1 +post2 action (x).